--- a/default.config.yml
+++ b/default.config.yml
@@ -124,18 +124,204 @@ composer_packages: []
 # - name: drush
 #   state: present # present/absent, default: present
 #   version: "^8.1" # default: N/A
-gem_packages: []
-# - name: bundler
-#   state: present # present/absent/latest, default: present
-#   version: "~> 1.15.1" # default: N/A
+gem_packages:
+  - name: abbrev
+    state: present
+    version: "~> 0.1.2"
+  - name: bootsnap
+    state: present
+    version: "~> 1.18.4"
+  - name: brakeman
+    state: present
+    version: "~> 7.0.2"
+  - name: bundler-audit
+    state: present
+    version: "~> 0.9.2"
+  - name: csv
+    state: present
+    version: "~> 3.3.2"
+  - name: did_you_mean
+    state: present
+    version: "~> 2.0.0"
+  - name: digest
+    state: present
+    version: "~> 3.2.0"
+  - name: english
+    state: present
+    version: "~> 0.8.0"
+  - name: erb
+    state: present
+    version: "~> 4.0.4"
+  - name: error_highlight
+    state: present
+    version: "~> 0.7.0"
+  - name: etc
+    state: present
+    version: "~> 1.4.5"
+  - name: faker
+    state: present
+    version: "~> 3.5.1"
+  - name: fcntl
+    state: present
+    version: "~> 1.2.0"
+  - name: fiddle
+    state: present
+    version: "~> 1.1.6"
+  - name: find
+    state: present
+    version: "~> 0.2.0"
+  - name: getoptlong
+    state: present
+    version: "~> 0.2.1"
+  - name: io-nonblock
+    state: present
+    version: "~> 0.3.1"
+  - name: io-wait
+    state: present
+    version: "~> 0.3.1"
+  - name: kamal
+    state: present
+    version: "~> 2.5.3"
+  - name: matrix
+    state: present
+    version: "~> 0.4.2"
+  - name: mutex_m
+    state: present
+    version: "~> 0.3.0"
+  - name: net-ftp
+    state: present
+    version: "~> 0.3.8"
+  - name: net-http
+    state: present
+    version: "~> 0.6.0"
+  - name: nkf
+    state: present
+    version: "~> 0.2.0"
+  - name: observer
+    state: present
+    version: "~> 0.1.2"
+  - name: open-uri
+    state: present
+    version: "~> 0.5.0"
+  - name: open3
+    state: present
+    version: "~> 0.2.1"
+  - name: optparse
+    state: present
+    version: "~> 0.6.0"
+  - name: pathname
+    state: present
+    version: "~> 0.4.0"
+  - name: prime
+    state: present
+    version: "~> 0.1.3"
+  - name: pstore
+    state: present
+    version: "~> 0.1.4"
+  - name: rails
+    state: present
+    version: "~> 8.0.2"
+  - name: rails
+    state: present
+    version: "~> 8.0.1"
+  - name: rails
+    state: present
+    version: "~> 7.2.2.1"
+  - name: readline
+    state: present
+    version: "~> 0.0.4"
+  - name: repl_type_completor
+    state: present
+    version: "~> 0.1.9"
+  - name: resolv-replace
+    state: present
+    version: "~> 0.1.1"
+  - name: rinda
+    state: present
+    version: "~> 0.2.0"
+  - name: rss
+    state: present
+    version: "~> 0.3.1"
+  - name: ruby-lsp
+    state: present
+    version: "~> 0.23.24"
+  - name: ruby-lsp
+    state: present
+    version: "~> 0.23.23"
+  - name: ruby2_keywords
+    state: present
+    version: "~> 0.0.5"
+  - name: set
+    state: present
+    version: "~> 1.1.1"
+  - name: shellwords
+    state: present
+    version: "~> 0.2.2"
+  - name: solid_cable
+    state: present
+    version: "~> 3.0.7"
+  - name: solid_cache
+    state: present
+    version: "~> 1.0.7"
+  - name: solid_queue
+    state: present
+    version: "~> 1.1.5"
+  - name: solid_queue
+    state: present
+    version: "~> 1.1.4"
+  - name: specific_install
+    state: present
+    version: "~> 0.3.8"
+  - name: strscan
+    state: present
+    version: "~> 3.1.2"
+  - name: syntax_suggest
+    state: present
+    version: "~> 2.0.2"
+  - name: syslog
+    state: present
+    version: "~> 0.2.0"
+  - name: tempfile
+    state: present
+    version: "~> 0.3.1"
+  - name: thruster
+    state: present
+    version: "~> 0.1.13"
+  - name: thruster
+    state: present
+    version: "~> 0.1.12"
+  - name: tmpdir
+    state: present
+    version: "~> 0.3.1"
+  - name: tsort
+    state: present
+    version: "~> 0.2.0"
+  - name: typeprof
+    state: present
+    version: "~> 0.30.1"
+  - name: un
+    state: present
+    version: "~> 0.3.0"
+  - name: uuid7
+    state: present
+    version: "~> 0.2.0"
+  - name: weakref
+    state: present
+    version: "~> 0.1.3"
+  - name: yaml
+    state: present
+    version: "~> 0.4.0"
+  - name: zlib
+    state: present
+    version: "~> 3.2.1"
 npm_packages: []
 # - name: webpack
 #   state: present # present/absent/latest, default: present
 #   version: "^2.6" # default: N/A
-pip_packages: []
-# - name: mkdocs
-#   state: present # present/absent/latest, default: present
-#   version: "0.16.3" # default: N/A
+pip_packages:
+  - name: pip
+    state: present
+    version: "==24.3.1"
 
 # Set to 'true' to configure Sublime Text.
 configure_sublime: false
