--- a/default.config.yml
+++ b/default.config.yml
@@ -322,24 +322,154 @@ pip_packages:
   - name: pip
     state: present
     version: "==24.3.1"
+  - name: PyYAML
+    state: present
+    version: "==6.0.2"
 
-# Set to 'true' to configure Sublime Text.
-configure_sublime: false
-sublime_base_path: "~/Library/Application Support/Sublime Text"
-sublime_config_path: "Packages/User"
-sublime_package_control:
-  - "DocBlockr"
-  - "Dockerfile Syntax Highlighting"
-  - "FileDiffs"
-  - "GitHub Flavored Markdown Preview"
-  - "Jinja2"
-  - "Package Control"
-  - "Pretty JSON"
-  - "SublimeLinter"
-  - "SublimeLinter-contrib-yamllint"
-  - "Theme - Cobalt2"
-  - "TrailingSpaces"
-  - "WordingStatus"
+# Set to 'true' to configure VSCode.
+configure_vscode: true
+vscode_base_path: "~/Library/Application Support/Code"
+vscode_config_path: "User"
+vscode_settings:
+  editor.largeFileOptimizations: false
+  editor.minimap.enabled: false
+  editor.tabCompletion: onlySnippets
+  editor.wordWrap: 'on'
+  files.autoSave: onWindowChange
+  git.autofetch: true
+  highlight-matching-tag.styles:
+    closing:
+      full:
+        custom:
+          dark:
+            borderColor: white
+            borderRadius: 4px
+            borderStyle: solid
+            borderWidth: 0 0 1px 0
+            right: 10px
+          light:
+            borderColor: brown
+            borderRadius: 4px
+            borderStyle: solid
+            borderWidth: 0 0 1px 0
+            right: 10px
+    opening:
+      left:
+        underline: yellow
+      name:
+        highlight: rgba(180, 20, 80, 0.3)
+      right:
+        surround: '#155FFA'
+  liveServer.settings.donotShowInfoMsg: true
+  security.workspace.trust.untrustedFiles: open
+  window.autoDetectColorScheme: true
+  workbench.colorTheme: "SynthWave '84"
+  workbench.iconTheme: material-icon-theme
+  workbench.preferredDarkColorTheme: "SynthWave '84"
+  workbench.preferredHighContrastColorTheme: "SynthWave '84"
+  workbench.preferredHighContrastLightColorTheme: "Serendipity Morning"
+  workbench.preferredLightColorTheme: "GitHub Light"
+  vscode_extensions:
+    - name: anikethsaha.htmllinter
+      state: present
+    - name: antfu.iconify
+      state: present
+    - name: bradlc.vscode-tailwindcss
+      state: present
+    - name: chakrounanas.turbo-console-log
+      state: present
+    - name: davidanson.vscode-markdownlint
+      state: present
+    - name: dbaeumer.vscode-eslint
+      state: present
+    - name: deinsoftware.vitest-snippets
+      state: present
+    - name: docker.docker
+      state: present
+    - name: dotup.dotup-vscode-interface-generator
+      state: present
+    - name: emeraldwalk.runonsave
+      state: present
+    - name: esbenp.prettier-vscode
+      state: present
+    - name: github.copilot
+      state: present
+    - name: github.copilot-chat
+      state: present
+    - name: github.github-vscode-theme
+      state: present
+    - name: github.vscode-github-actions
+      state: present
+    - name: golang.go
+      state: present
+    - name: htmlhint.vscode-htmlhint
+      state: present
+    - name: jake-demian.project-hierarchy-explorer
+      state: present
+    - name: jebbs.plantuml
+      state: present
+    - name: leneti.yaml-fm-lint
+      state: present
+    - name: mariusalchimavicius.json-to-ts
+      state: present
+    - name: mattpocock.ts-error-translator
+      state: present
+    - name: mechatroner.rainbow-csv
+      state: present
+    - name: mohd-akram.vscode-html-format
+      state: present
+    - name: mohsen1.prettify-json
+      state: present
+    - name: ms-azuretools.vscode-containers
+      state: present
+    - name: ms-azuretools.vscode-docker
+      state: present
+    - name: ms-python.debugpy
+      state: present
+    - name: ms-python.python
+      state: present
+    - name: ms-python.vscode-pylance
+      state: present
+    - name: ms-vscode-remote.remote-containers
+      state: present
+    - name: ms-vscode.makefile-tools
+      state: present
+    - name: ms-vscode.vscode-typescript-next
+      state: present
+    - name: oderwat.indent-rainbow
+      state: present
+    - name: pkief.material-icon-theme
+      state: present
+    - name: quicktype.quicktype
+      state: present
+    - name: rangav.vscode-thunder-client
+      state: present
+    - name: ritwickdey.liveserver
+      state: present
+    - name: robbowen.synthwave-vscode
+      state: present
+    - name: sdras.vue-vscode-snippets
+      state: present
+    - name: stylelint.vscode-stylelint
+      state: present
+    - name: vincaslt.highlight-matching-tag
+      state: present
+    - name: vitest.explorer
+      state: present
+    - name: vsls-contrib.gitdoc
+      state: present
+    - name: vue.volar
+      state: present
+    - name: well-ar.plantuml
+      state: present
+    - name: wicked-labs.wvsc-serendipity
+      state: present
+    - name: willjleong.nuxt-typescript-snippets
+      state: present
+    - name: wmaurer.change-case
+      state: present
+    - name: yzhang.markdown-all-in-one
+      state: present
 
 # Glob pattern to ansible task files to run after all other tasks are finished.
 post_provision_tasks: []
