--- a/main.yml
+++ b/main.yml
@@ -42,9 +42,9 @@
     - import_tasks: tasks/extra-packages.yml
       tags: ['extra-packages']
 
-    - import_tasks: tasks/sublime-text.yml
-      when: configure_sublime
-      tags: ['sublime-text']
+    - import_tasks: tasks/vscode.yml
+      when: configure_vscode
+      tags: ['vscode']
 
     - name: Run post-provision task files in a block.
       tags: ['post']
